# scaffold

./: .coveragerc  .env  .gitignore  .pyspelling.yml  .wordlist.txt  CNAME  Dockerfile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  tox.ini  versions.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1_bug_report.yml  2_feature_request.yml  3_task.yml  4_other.yml  bug_report.md  feature_request.md  other.md
.github/workflows/: autoblack.yml  lint.yml  master_deploy_docs.yml  on_pr-code.yml  on_pr-docs.yml  on_pr.yml  on_pr_label-version_check.yml  on_pr_open-version_label.yml  on_push_master-tag_version.yml  test.yml  tests.yml  version_check.yml
2.0/: 404.html  index.html  sitemap.xml
2.0/explanation/: index.html
2.0/how-to-guides/: index.html
2.0/reference/: index.html
2.0/search/: search_index.json
2.0/tutorials/: index.html
2.1/: 404.html  index.html  sitemap.xml
2.1/explanation/: index.html
2.1/how-to-guides/: index.html
2.1/reference/: index.html
2.1/tutorials/: index.html
3.0/: 404.html  index.html  objects.inv  sitemap.xml
3.0/explanation/: index.html
3.0/how-to-guides/: index.html
3.0/reference/: index.html
3.0/search/: search_index.json
3.0/tutorials/: index.html
docs/: how-to-guides.md  index.md  reference.md
src/: conftest.py
src/scaffold/: __init__.py  __main__.py  bar.py  baz.py  calculator.py  foo.py
tests/: conftest.py
tests/functional/: test_bar.py  test_foo.py  test_step.py
tests/integration/: test_baz.py  test_foo.py
tests/unit/: test_async.py  test_foo.py
